2011-03-12  Mike Blumenkrantz (discomfitor/zmike)
+EEZE_UDEV_TYPE_NET, added from patch sent by Clement Battin

2011-03-03  Mike Blumenkrantz (discomfitor/zmike)
fix bug with watches involving filtering being too aggressive for removed/offlined devices

2011-02-09  Mike Blumenkrantz (discomfitor/zmike)
implement actual handling of mountopts, add utf8 to default mountopts, allow iso automounting in eeze_mount
+EEZE_DISK_MOUNTOPT_UTF8 = (1 << 2)
+EEZE_DISK_MOUNTOPT_NOEXEC = (1 << 3)
+EEZE_DISK_MOUNTOPT_NOSUID = (1 << 4)
+EEZE_DISK_MOUNTOPT_REMOUNT = (1 << 5)
+EAPI Eina_Bool      eeze_disk_mountopts_set(Eeze_Disk *disk, int opts);
+EAPI int            eeze_disk_mountopts_get(Eeze_Disk *disk);

2011-01-29  Mike Blumenkrantz (discomfitor/zmike)
+Eeze_Disk_Type enum
+Eeze_Mount_Opts enum

+EEZE_EVENT_DISK_MOUNT
+EEZE_EVENT_DISK_UNMOUNT
+EEZE_EVENT_DISK_ERROR

+Eeze_Event_Disk_Mount struct
+Eeze_Event_Disk_Unmount struct
+Eeze_Event_Disk_Error struct

+the following functions:
EAPI void           eeze_disk_function(void);
EAPI Eeze_Disk     *eeze_disk_new(const char *path);
EAPI Eeze_Disk     *eeze_disk_new_from_mount(const char *mount_point);
EAPI void           eeze_disk_free(Eeze_Disk *disk);
EAPI void           eeze_disk_scan(Eeze_Disk *disk);
EAPI void           eeze_disk_data_set(Eeze_Disk *disk, void *data);
EAPI void          *eeze_disk_data_get(Eeze_Disk *disk);
EAPI const char    *eeze_disk_syspath_get(Eeze_Disk *disk);
EAPI const char    *eeze_disk_devpath_get(Eeze_Disk *disk);
EAPI const char    *eeze_disk_fstype_get(Eeze_Disk *disk);
EAPI const char    *eeze_disk_vendor_get(Eeze_Disk *disk);
EAPI const char    *eeze_disk_model_get(Eeze_Disk *disk);
EAPI const char    *eeze_disk_serial_get(Eeze_Disk *disk);
EAPI const char    *eeze_disk_uuid_get(Eeze_Disk *disk);
EAPI const char    *eeze_disk_label_get(Eeze_Disk *disk);
EAPI Eeze_Disk_Type eeze_disk_type_get(Eeze_Disk *disk);
EAPI Eina_Bool      eeze_disk_removable_get(Eeze_Disk *disk);